[gd_scene load_steps=5 format=3 uid="uid://cpwlnanwp86l"]

[ext_resource type="Script" path="res://modules/projectiles/test_bullet/test_bullet.gd" id="1_bjyke"]
[ext_resource type="PackedScene" uid="uid://cnwyh247c35yk" path="res://modules/hitbox/hitbox.tscn" id="2_8sgmm"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_myi0n"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umh7a"]
size = Vector2(8, 8)

[node name="TestBullet" type="CharacterBody2D" groups=["enemy_attacks"]]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_bjyke")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_myi0n")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.38419e-07, -2.38419e-07)
scale = Vector2(0.4, 0.4)

[node name="Hitbox" parent="." instance=ExtResource("2_8sgmm")]
collision_layer = 8
collision_mask = 5
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_umh7a")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]

[editable path="Hitbox"]
